tests/reliability/reject/mods/cyc_a.keel
import "cyc_b.keel"
def a_fn(); int:
    return 1
